--- a/Notebook/path/ed-donner_agents/5_autogen/3_lab3_autogen_core_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/5_autogen/3_lab3_autogen_core_ja.ipynb
@@ -88,6 +88,7 @@
     "from autogen_agentchat.agents import AssistantAgent\n",
     "from autogen_agentchat.messages import TextMessage\n",
     "\n",
+    "# 初期化\n",
     "load_dotenv(override=True)"
    ]
   },
@@ -312,9 +313,9 @@
      "output_type": "stream",
      "text": [
       "LLMAgent received message: こんにちは！\n",
-      "LLMAgent responded: こんにちは！どういったことをお手伝いできますか？\n",
-      "LLMAgent received message: これは simple_agent-default です。あなたは「こんにちは！どういったことをお手伝いできますか？」と言いましたが、私は同意しません。\n",
-      "LLMAgent responded: ご意見ありがとうございます。何か特定のことについてお話ししたいことがありますか？お手伝いできることがあれば教えてください。\n"
+      "LLMAgent responded: こんにちは！今日はどんなことをお手伝いしましょうか？\n",
+      "LLMAgent received message: これは simple_agent-default です。あなたは「こんにちは！今日はどんなことをお手伝いしましょうか？」と言いましたが、私は同意しません。\n",
+      "LLMAgent responded: ご意見ありがとうございます。どのようにお手伝いできるか、具体的なリクエストがあれば教えてください。\n"
      ]
     }
    ],
@@ -332,9 +333,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>> こんにちは！どういったことをお手伝いできますか？\n",
-      ">>> これは simple_agent-default です。あなたは「こんにちは！どういったことをお手伝いできますか？」と言いましたが、私は同意しません。\n",
-      ">>> ご意見ありがとうございます。何か特定のことについてお話ししたいことがありますか？お手伝いできることがあれば教えてください。\n"
+      ">>> こんにちは！今日はどんなことをお手伝いしましょうか？\n",
+      ">>> これは simple_agent-default です。あなたは「こんにちは！今日はどんなことをお手伝いしましょうか？」と言いましたが、私は同意しません。\n",
+      ">>> ご意見ありがとうございます。どのようにお手伝いできるか、具体的なリクエストがあれば教えてください。\n"
      ]
     }
    ],
@@ -429,10 +430,12 @@
     "        \n",
     "        instruction = \"あなたはじゃんけんをしています。次のうちのいずれか一つの単語だけで答えてください：グー、パー、チョキ。\"\n",
     "\n",
-    "        # メッセージを２つのプレイヤーに送る\n",
-    "        message = Message(content=instruction)\n",
+    "        # ※ インスタンスを生成するのではなく取得する。\n",
     "        inner_1 = AgentId(\"player1\", \"default\")\n",
     "        inner_2 = AgentId(\"player2\", \"default\")        \n",
+    "        \n",
+    "        # メッセージを２つのプレイヤーに送る\n",
+    "        message = Message(content=instruction)\n",
     "        response1 = await self.send_message(message, inner_1)\n",
     "        response2 = await self.send_message(message, inner_2)\n",
     "\n",
@@ -493,9 +496,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Player 1: パー\n",
+      "Player 1: グー\n",
       "Player 2: グー\n",
-      "ジャンケンのルールに基づくと、パーはグーに勝てません。したがって、Player 2が勝ちました。TERMINATE\n"
+      "ジャンケンでは、同じ手を出した場合は引き分けとなります。したがって、Player 1とPlayer 2の双方がグーを出したため、勝者はありません。引き分けです。 \n",
+      "\n",
+      "TERMINATE\n"
      ]
     }
    ],
@@ -504,9 +509,7 @@
     "agent_id = AgentId(\"rock_paper_scissors\", \"default\")\n",
     "message = Message(content=\"go\")\n",
     "response = await runtime.send_message(message, agent_id)\n",
-    "print(response.content)\n",
-    "\n",
-    "# 日本語に弱いのか（笑）"
+    "print(response.content)"
    ]
   },
   {
