--- a/Notebook/path/ed-donner_agents/4_langgraph/5_lab5_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/4_langgraph/5_lab5_ja.ipynb
@@ -8,6 +8,9 @@
     "- 5日目 はあるのに、5日目の `*ipynb` がなかったので作成。\n",
     "- ただし、内容は カレント・ディレクトリの `*.py` モジュールを実行するだけ。\n",
     "- コレ等のモジュールは `4_lab4.ipynb` の実装を詰め込んだもの。\n",
+    "  - app.py : エントリポイントとUIの実装\n",
+    "  - sidekick.py : 本体の実装\n",
+    "  - sidekick_tools.py : ツール類の実装\n",
     "- なので、コチラは、日本語化を行っていない（コメントは付与）。\n",
     "- ただし、若干の実装強化あり（ツールと対応したプロンプトの追加）。\n",
     "- その他、追い付き修正は、特に無し。"
