--- a/Notebook/path/ed-donner_agents/5_autogen/2_lab2_autogen_agentchat_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/5_autogen/2_lab2_autogen_agentchat_ja.ipynb
@@ -618,9 +618,13 @@
     "from autogen_ext.models.openai import OpenAIChatCompletionClient\n",
     "from autogen_ext.tools.mcp import StdioServerParams, mcp_server_tools\n",
     "\n",
-    "# mcp-server-fetch\n",
-    "# STDIO方式のMCPツールをuvxでinstall\n",
-    "# コレは、curl/requests の MCPツール版。\n",
+    "# mcp-server-fetch：STDIO方式のMCPツールをuvxでinstallして使用する。\n",
+    "# ・コレは、curl/requests の MCPツール版で、Web検索機能はない。\n",
+    "#   LLM自体が記憶している URLや、RAG などで知った URL を指定して情報を取得する。\n",
+    "#   https://www.google.com/search?q=...はスクレイピング扱いでブロックされる。\n",
+    "#   コレまで使ってきた Playwright で検索できるが同様に警戒されている。\n",
+    "# ・ちなみに、`uvx`は`uv`でインストールするパッケージをインストールせず一時使用するもの。\n",
+    "#   現在のMCPエコシステムでは、`uvx`がMCPサーバーの実行における事実上の標準ツールとなっている。\n",
     "fetch_mcp_server = StdioServerParams(command=\"uvx\", args=[\"mcp-server-fetch\"], read_timeout_seconds=30)\n",
     "\n",
     "# Agentツール化するラッパ\n",
