--- a/Notebook/path/ed-donner_agents/6_mcp/1_lab1_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/6_mcp/1_lab1_ja.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6週目へようこそ\n",
+    "## 第6週、1日目へようこそ\n",
     "\n",
     "壮大なフィナーレ週\n",
     "\n",
@@ -186,6 +186,7 @@
    ],
    "source": [
     "# \"playwright/mcp\"をエージェント・ツール化\n",
+    "# コチラは、NodeJS の MCPフェッチツールなので、npxを使っているのがポイントとなる。\n",
     "playwright_params = {\"command\": \"npx\",\"args\": [ \"@playwright/mcp@latest\"]}\n",
     "\n",
     "async with MCPServerStdio(params=playwright_params, client_session_timeout_seconds=60) as server:\n",
@@ -292,14 +293,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I have created a great Banoffee Pie recipe summarized in markdown format and saved it as /home/seigi/sandbox/banoffee.md. If you need any further details or assistance, please let me know!\n"
+      "I have created a summarized Banoffee Pie recipe and saved it to the file /home/seigi/sandbox/banoffee.md. If you would like me to help with anything else, please let me know!\n"
      ]
     }
    ],
@@ -332,6 +333,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Banoffee Pie Recipe\n",
+       "\n",
+       "## Ingredients\n",
+       "- 300g digestive biscuits (crushed)\n",
+       "- 150g unsalted butter (melted)\n",
+       "- 1 can (400g) sweetened condensed milk (to make caramel)\n",
+       "- 3 bananas\n",
+       "- 300ml double cream\n",
+       "- 1 tbsp icing sugar\n",
+       "- Grated chocolate or cocoa powder (to garnish)\n",
+       "\n",
+       "## Instructions\n",
+       "\n",
+       "1. **Prepare the base:**\n",
+       "   - Mix crushed digestive biscuits with melted butter until fully combined.\n",
+       "   - Press the mixture firmly into the base of a 23cm (9-inch) loose-bottomed tart tin.\n",
+       "   - Chill in the fridge for 10 minutes.\n",
+       "\n",
+       "2. **Make the caramel:**\n",
+       "   - Place the unopened can of sweetened condensed milk in a pan of boiling water.\n",
+       "   - Simmer for 2-3 hours, ensuring the can is always covered with water.\n",
+       "   - Remove the can and let cool completely before opening.\n",
+       "   - Alternatively, use ready-made dulce de leche.\n",
+       "\n",
+       "3. **Assemble the pie:**\n",
+       "   - Spread the caramel evenly over the biscuit base.\n",
+       "   - Slice bananas and arrange them over the caramel.\n",
+       "\n",
+       "4. **Whip the cream:**\n",
+       "   - Whip the double cream with icing sugar until soft peaks form.\n",
+       "   - Spread the cream over the bananas.\n",
+       "\n",
+       "5. **Garnish and serve:**\n",
+       "   - Sprinkle grated chocolate or cocoa powder over the top.\n",
+       "   - Chill the pie until ready to serve.\n",
+       "\n",
+       "Enjoy your homemade Banoffee Pie!\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import Markdown, display\n",
+    "\n",
+    "# ファイルを読み込む\n",
+    "with open(\"/home/seigi/sandbox/banoffee.md\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    md_content = f.read()\n",
+    "\n",
+    "# Markdownとして表示\n",
+    "display(Markdown(md_content))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -341,15 +407,16 @@
     "\n",
     "### MCP市場をいくつか見てみましょう\n",
     "\n",
+    "- MCP Servers  \n",
     "https://mcp.so\n",
     "\n",
+    "- MCP – Model Context Protocol Servers, Clients, and Tools  \n",
     "https://glama.ai/mcp\n",
     "\n",
+    "- Smithery - Extend your agent's capabilities  \n",
     "https://smithery.ai/\n",
     "\n",
-    "https://huggingface.co/blog/llmhacker/top-11-ensenty-mcp-libraries\n",
-    "\n",
-    "Huggingface素晴らしいコミュニティ記事：\n",
+    "- Huggingface素晴らしいコミュニティ記事：  \n",
     "https://huggingface.co/blog/kseniase/mcp"
    ]
   }
