--- a/Notebook/path/ed-donner_agents/6_mcp/2_lab2_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/6_mcp/2_lab2_ja.ipynb
@@ -151,7 +151,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 次に、MCPサーバーを書き、直接使用します！"
+    "### 次に、MCPサーバーを書き、直接使用します！\n",
+    "- 既成のものはパッケージ・マネージャに登録されているので、uvx パッケージ名で実行した、\n",
+    "- 一方で、自作のものはパッケージ・マネージャに登録されていないので、uv runで実行する。"
    ]
   },
   {
