--- a/Notebook/path/ed-donner_agents/6_mcp/4_lab4_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/6_mcp/4_lab4_ja.ipynb
@@ -29,12 +29,14 @@
     "\n",
     "# 自律トレーダー\n",
     "\n",
-    "4人のトレーダーと1人のリサーチャーによる株式取引シミュレーション。ツールとリソースを備えた多数のMCPサーバーを活用。\n",
+    "4人のトレーダーと1人のリサーチャーによる株式取引シミュレーション。\n",
     "\n",
+    "（各トレーダーにリサーチャーがツールとしてアシストに付く感じ）\n",
+    "\n",
+    "ツールとリソースを備えた多数のMCPサーバーを活用。\n",
     "\n",
     "1. accounts.py、accounts_server.py  \n",
     "自作の account MCPサーバー（エンジニアリング・チームによって書かれています！）\n",
-    "\n",
     "\n",
     "2. Brave Search API  \n",
     "Brave Software が提供する検索サービス Brave Search を利用するAPI。\n",
@@ -48,7 +50,7 @@
     "5. market.py、market_server.py  \n",
     "自作の market MCPサーバー（Polygon.ioで財務データをチェックする）\n",
     "\n",
-    "トレーダーのアカウントと、その投資戦略に関する情報を読むためのリソース。\n",
+    "など、トレーダーのアカウントと、その投資戦略に関する情報を読むためのリソース。\n",
     "\n",
     "今日のラボの目標は、新しいPythonモジュール `traders.py` を作成することです。\n",
     "\n",
@@ -303,17 +305,15 @@
     {
      "data": {
       "text/markdown": [
-       "Here are the latest key news highlights about Amazon:\n",
+       "Here are some of the latest news highlights about Amazon as of September 2025:\n",
        "\n",
-       "1. Amazon is guided by principles such as customer obsession, passion for invention, operational excellence, and long-term thinking. They continue to focus on innovation and customer-centric growth. (source: aboutamazon.com)\n",
+       "1. Amazon now offers same-day perishable grocery delivery in over 1,000 cities and towns, with plans to double that reach by the end of the year. Same-day delivery is free for orders over $25 for Prime members in most cities.\n",
+       "2. Amazon Prime Day 2025 was the biggest ever, breaking records for sales volume and total items sold during the 4-day event.\n",
+       "3. Amazon's Project Kuiper is progressing with more than 80 satellite missions launched to deploy its initial low Earth orbit satellite internet constellation, currently growing to over 100 satellites.\n",
+       "4. AWS (Amazon Web Services) announced upcoming events including AWS Transform and re:Invent 2025 with innovations and expert-led discussions.\n",
+       "5. Amazon continues to focus on innovation and operational excellence guided by principles such as customer obsession and long-term thinking.\n",
        "\n",
-       "2. A recent legal development in the US: Amazon must face a nationwide class action lawsuit regarding overcharging by third-party sellers on its platform. This affects claims from hundreds of millions of U.S. consumers. (source: Reuters)\n",
-       "\n",
-       "3. On the stock market front, you can find the latest Amazon stock price, history, and financial updates on Yahoo Finance, useful for tracking its trading activity and investment sentiment.\n",
-       "\n",
-       "4. In related business news, Amazon Web Services (AWS) continues to expand and innovate in cloud computing with new announcements and launches.\n",
-       "\n",
-       "If you'd like, I can provide a detailed summary or focus on specific aspects like legal, stock performance, or AWS updates."
+       "If you want detailed information on any of these topics or the latest stock updates, let me know!"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -359,7 +359,7 @@
     {
      "data": {
       "text/markdown": [
-       "{\"name\": \"ed\", \"balance\": 10000.0, \"strategy\": \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\", \"holdings\": {}, \"transactions\": [], \"portfolio_value_time_series\": [[\"2025-09-15 03:44:52\", 10000.0]], \"total_portfolio_value\": 10000.0, \"total_profit_loss\": 0.0}"
+       "{\"name\": \"ed\", \"balance\": 10000.0, \"strategy\": \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\", \"holdings\": {}, \"transactions\": [], \"portfolio_value_time_series\": [[\"2025-09-15 19:03:17\", 10000.0]], \"total_portfolio_value\": 10000.0, \"total_profit_loss\": 0.0}"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -462,7 +462,7 @@
       "Your investment strategy for your portfolio is:\n",
       "You are a day trader that aggressively buys and sells shares based on news and market conditions.\n",
       "Your current holdings and balance is:\n",
-      "{\"name\": \"ed\", \"balance\": 10000.0, \"strategy\": \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\", \"holdings\": {}, \"transactions\": [], \"portfolio_value_time_series\": [[\"2025-09-15 03:44:52\", 10000.0], [\"2025-09-15 03:45:27\", 10000.0]], \"total_portfolio_value\": 10000.0, \"total_profit_loss\": 0.0}\n",
+      "{\"name\": \"ed\", \"balance\": 10000.0, \"strategy\": \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\", \"holdings\": {}, \"transactions\": [], \"portfolio_value_time_series\": [[\"2025-09-15 19:03:17\", 10000.0], [\"2025-09-15 19:03:43\", 10000.0]], \"total_portfolio_value\": 10000.0, \"total_profit_loss\": 0.0}\n",
       "You have the tools to perform a websearch for relevant news and information.\n",
       "You have tools to check stock prices.\n",
       "You have tools to buy and sell shares.\n",
@@ -492,28 +492,41 @@
     {
      "data": {
       "text/markdown": [
-       "### Summary of Actions\n",
+       "### Summary of Actions Taken:\n",
        "\n",
-       "1. **News and Market Analysis**:\n",
-       "   - Investigated the latest financial news focusing on cryptocurrency, market trends, and noteworthy stock movements.\n",
-       "   - Identified that Amazon's stock has potential for a significant price increase, and Bitcoin is stable with positive momentum from ETF news.\n",
+       "1. **Market Analysis**:\n",
+       "   - Reviewed the latest stock market conditions, focusing on midcap growth stocks and companies with strong insider ownership.\n",
+       "   - Noted that U.S. markets are at record highs, with strong potential for volatility following economic data releases.\n",
        "\n",
-       "2. **Stock Purchases**:\n",
-       "   - **Amazon (AMZN)**: Purchased **20 shares** at **$228.61** each.\n",
-       "     - Rationale: Anticipating a price increase to **$300** based on market sentiment and economic indicators.\n",
-       "   - **Bitcoin (BTC)**: Bought **5 Bitcoins** at **$51,883.56** each.\n",
-       "     - Rationale: Stable price around **$115,550** with positive news on cryptocurrency ETFs suggesting strong short-term potential.\n",
+       "2. **Stock Selection**:\n",
+       "   - Chose to invest in the following midcap growth stocks based on their potential and market conditions:\n",
+       "     - **Monday.com Ltd. (MNDY)**\n",
+       "     - **Wix.com Ltd. (WIX)**\n",
+       "     - **Dolby Laboratories (DLB)**\n",
+       "     - **Krystal Biotech (KRYS)**\n",
+       "     - **Harmony Biosciences Holdings (HRMY)**\n",
        "\n",
-       "3. **Current Holdings and Balance**:\n",
-       "   - **Holdings**: \n",
-       "     - 20 shares of Amazon (AMZN)\n",
-       "     - 5 Bitcoins (BTC)\n",
-       "   - **Current Balance**: **$5,168.46**\n",
-       "   - **Total Portfolio Value**: Approximately **$9,990.36**\n",
-       "   - **Total Loss**: Approximately **-$9.64** since the last valuation\n",
+       "3. **Purchases Executed**:\n",
+       "   - Attempted to buy:\n",
+       "     - **50 shares** of **MNDY** at approximately $192.33 per share.\n",
+       "     - **30 shares** of **WIX,** **40 shares** of **DLB,** **25 shares** of **KRYS,** and **20 shares** of **HRMY**.\n",
+       "   - **Result**: \n",
+       "     - The purchase of **50 shares of MNDY** was successful, reducing the cash balance from $10,000 to approximately $9,980.80.\n",
+       "     - **Subsequent purchases** of WIX, DLB, KRYS, and HRMY failed due to insufficient funds.\n",
        "\n",
-       "### Next Steps\n",
-       "I will continue to monitor any fluctuations in stock prices and related news to make further trading decisions as opportunities arise."
+       "### Current Portfolio Status:\n",
+       "- **Holdings**:\n",
+       "  - **MNDY**: 50 shares\n",
+       "- **Cash Balance**: $383.31\n",
+       "- **Portfolio Value**: $9,980.80\n",
+       "- **Total Profit/Loss**: -$19.19\n",
+       "\n",
+       "### Next Steps:\n",
+       "- Monitor the performance of MNDY and assess further trading opportunities.\n",
+       "- Consider liquidating positions if there are favorable market conditions.\n",
+       "- Look for new investment opportunities that align with day trading strategy and are within the remaining cash balance. \n",
+       "\n",
+       "If you have specific stocks in mind or would like to analyze other sectors, please let me know!"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -563,7 +576,7 @@
     {
      "data": {
       "text/plain": [
-       "'{\"name\": \"ed\", \"balance\": 5168.4562, \"strategy\": \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\", \"holdings\": {\"AMZN\": 20, \"BTC\": 5}, \"transactions\": [{\"symbol\": \"AMZN\", \"quantity\": 20, \"price\": 228.6063, \"timestamp\": \"2025-09-15 03:47:27\", \"rationale\": \"Anticipating a price increase to $300 based on market sentiment and economic data.\"}, {\"symbol\": \"BTC\", \"quantity\": 5, \"price\": 51.88356, \"timestamp\": \"2025-09-15 03:47:28\", \"rationale\": \"Stable price around $115,550 and positive ETF news suggests strong short-term potential.\"}], \"portfolio_value_time_series\": [[\"2025-09-15 03:44:52\", 10000.0], [\"2025-09-15 03:45:27\", 10000.0], [\"2025-09-15 03:47:28\", 9990.874], [\"2025-09-15 03:47:28\", 9990.3562], [\"2025-09-15 03:47:43\", 9990.3562]], \"total_portfolio_value\": 9990.3562, \"total_profit_loss\": -9.643799999999828}'"
+       "'{\"name\": \"ed\", \"balance\": 383.3050000000003, \"strategy\": \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\", \"holdings\": {\"MNDY\": 50}, \"transactions\": [{\"symbol\": \"MNDY\", \"quantity\": 50, \"price\": 192.3339, \"timestamp\": \"2025-09-15 19:05:19\", \"rationale\": \"Midcap growth stock with strong potential and recent positive news.\"}], \"portfolio_value_time_series\": [[\"2025-09-15 19:03:17\", 10000.0], [\"2025-09-15 19:03:43\", 10000.0], [\"2025-09-15 19:05:20\", 9980.805], [\"2025-09-15 20:09:03\", 9980.805]], \"total_portfolio_value\": 9980.805, \"total_profit_loss\": -19.19499999999971}'"
       ]
      },
      "execution_count": 13,
@@ -615,7 +628,7 @@
     {
      "data": {
       "text/plain": [
-       "'{\"name\": \"ed\", \"balance\": 267.0114800000001, \"strategy\": \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\", \"holdings\": {\"AMZN\": 20, \"BTC\": 5, \"WOLF\": 1000, \"ADSK\": 8}, \"transactions\": [{\"symbol\": \"AMZN\", \"quantity\": 20, \"price\": 228.6063, \"timestamp\": \"2025-09-15 03:47:27\", \"rationale\": \"Anticipating a price increase to $300 based on market sentiment and economic data.\"}, {\"symbol\": \"BTC\", \"quantity\": 5, \"price\": 51.88356, \"timestamp\": \"2025-09-15 03:47:28\", \"rationale\": \"Stable price around $115,550 and positive ETF news suggests strong short-term potential.\"}, {\"symbol\": \"WOLF\", \"quantity\": 2000, \"price\": 2.33466, \"timestamp\": \"2025-09-15 03:49:16\", \"rationale\": \"Strength in recent earnings and high volatility make WOLF an excellent day trading opportunity.\"}, {\"symbol\": \"WOLF\", \"quantity\": -1000, \"price\": 2.32534, \"timestamp\": \"2025-09-15 03:49:18\", \"rationale\": \"Taking profit from initial position to reinvest.\"}, {\"symbol\": \"ADSK\", \"quantity\": 8, \"price\": 319.68309, \"timestamp\": \"2025-09-15 03:49:21\", \"rationale\": \"Investing remaining balance into ADSK as it has strong potential for short-term gains.\"}], \"portfolio_value_time_series\": [[\"2025-09-15 03:44:52\", 10000.0], [\"2025-09-15 03:45:27\", 10000.0], [\"2025-09-15 03:47:28\", 9990.874], [\"2025-09-15 03:47:28\", 9990.3562], [\"2025-09-15 03:47:43\", 9990.3562], [\"2025-09-15 03:48:40\", 9990.3562], [\"2025-09-15 03:49:16\", 9981.036199999999], [\"2025-09-15 03:49:18\", 9976.376199999999], [\"2025-09-15 03:49:22\", 9971.27148], [\"2025-09-15 03:49:37\", 9971.27148]], \"total_portfolio_value\": 9971.27148, \"total_profit_loss\": -28.728519999999662}'"
+       "'{\"name\": \"ed\", \"balance\": 39.759280000000274, \"strategy\": \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\", \"holdings\": {\"MNDY\": 50, \"PLTR\": 2}, \"transactions\": [{\"symbol\": \"MNDY\", \"quantity\": 50, \"price\": 192.3339, \"timestamp\": \"2025-09-15 19:05:19\", \"rationale\": \"Midcap growth stock with strong potential and recent positive news.\"}, {\"symbol\": \"PLTR\", \"quantity\": 2, \"price\": 171.77286, \"timestamp\": \"2025-09-15 20:10:55\", \"rationale\": \"Strong revenue and earnings growth, AI integration.\"}], \"portfolio_value_time_series\": [[\"2025-09-15 19:03:17\", 10000.0], [\"2025-09-15 19:03:43\", 10000.0], [\"2025-09-15 19:05:20\", 9980.805], [\"2025-09-15 20:09:03\", 9980.805], [\"2025-09-15 20:09:45\", 9980.805], [\"2025-09-15 20:10:55\", 9980.11928], [\"2025-09-15 20:11:08\", 9980.11928]], \"total_portfolio_value\": 9980.11928, \"total_profit_loss\": -19.880719999999258}'"
       ]
      },
      "execution_count": 14,
@@ -668,6 +681,23 @@
     "        mcp_tools = await server.list_tools()\n",
     "        count += len(mcp_tools)\n",
     "print(f\"We have {len(all_params)} MCP servers, and {count} tools\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 上記で触れらていないファイルの説明\n",
+    "\n",
+    "- `push_server.py`はPushoverによるプッシュ通知の自作MCPサーバ\n",
+    "- `templates.py`は、エージェントのシステム・プロンプト定義\n",
+    "- `reset.py`は、（トレーダーの）アカウントの初期化（特に戦略定義）\n",
+    "- `tracers.py`は、トレースとスパンの開始・終了をログに記録\n",
+    "\n",
+    "以下は、`5_lab5_ja.ipynb` で触れる内容。\n",
+    "\n",
+    "- `util.py`はUI装飾\n",
+    "- `app.py`はエントリポイント"
    ]
   }
  ],
